# gpg-verify-trust

./: configure  configure.ac
src/: Makefile.am  gpg-verify-trust.c
